--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,9 +15,16 @@
   background-size: cover;
   margin-top: -10rem;
   transform: skewY(-7deg);
+
   & > * {
     transform: skewY(7deg);
   }
   //   clip-path: polygon(0 25%, 100% 0, 100% 75%, 0% 100%);
   // }I made this polygon using this (bennettfeely.com/clippy/)
+}
+
+.section-tours {
+  background-color: $color-gray-light-1;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
 }
