--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,15 +12,20 @@ $color-tertiary-dark: #5643fa;
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 
-$color-gray-dark: #777;
+$color-gray-dark-1: #777;
+$color-gray-dark-2: #999;
+
 $color-white: #fff;
 $color-black: #000;
 
 // FONT SIZES
-$defult-font-size: 1.6rem;
+$default-font-size: 1.6rem;
 
 // GRID
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+//BORDER RADIUS
+$default-border-radius: 3px;
