--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -6,8 +6,8 @@
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
-  font-size: $defult-font-size;
-  transform: skewX(-12deg);
+  font-size: $default-font-size;
+  transform: skew(-12deg);
 
   &__shape {
     width: 15rem;
