--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,7 +28,7 @@ body {
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
-  color: $color-gray-dark;
+  color: $color-gray-dark-1;
   padding: 3rem;
 }
 
@@ -43,6 +43,7 @@ body {
     $color-primary-dark
   );
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
@@ -54,13 +55,13 @@ body {
 }
 
 .heading-tertiary {
-  font-size: $defult-font-size;
+  font-size: $default-font-size;
   font-weight: 700;
   text-transform: uppercase;
 }
 
 .paragraph {
-  font-size: $defult-font-size;
+  font-size: $default-font-size;
   &:not(:last-child) {
     margin-bottom: 3rem;
   }
