--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,6 +13,11 @@
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
   &--sub {
     display: block;
@@ -20,6 +25,10 @@
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+      font-size: 1rem;
+    }
   }
 }
 
@@ -29,7 +38,6 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: $color-gray-dark-1;
-  padding: 3rem;
 }
 
 .heading-secondary {
@@ -47,7 +55,12 @@ body {
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
-
+  @include respond(tab-port) {
+    font-size: 2.5rem;
+  }
+  @include respond(phone) {
+    font-size: 2rem;
+  }
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
