--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -11,6 +11,12 @@
   visibility: hidden;
   transition: all 0.3s;
 
+  @supports (-webkit-backdrop-filter: blur(10px)) or
+    (backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
   &__content {
     @include center-horizontal-vertical;
     width: 75%;
@@ -22,20 +28,51 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.5s 0.2s;
+
+    @include respond(tab-land) {
+      width: 100%;
+    }
+
+    @include respond(tab-port) {
+      display: block;
+    }
   }
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: block;
+      width: 100%;
+    }
   }
   &__right {
     right: 66.666666%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      display: block;
+      width: 100%;
+      padding: 1.5rem 3.5rem;
+    }
   }
   &__img {
     display: block;
     width: 100%;
+    height: auto;
+
+    @include respond(tab-port) {
+      display: inline-block;
+      width: 50%;
+      height: 30rem;
+      float: left;
+    }
+
+    @include respond(phone) {
+      display: none;
+    }
   }
   &__text {
     font-size: 1.4rem;
@@ -53,6 +90,10 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    @include respond(tab-port) {
+      margin-bottom: 2.5rem;
+    }
   }
 
   // OPEN STATES
@@ -76,6 +117,10 @@
       display: inline-block;
       transition: all 0.2s;
       line-height: 1;
+      @include respond(tab-land) {
+        top: 4rem;
+        right: 4rem;
+      }
     }
     &:hover {
       color: $color-primary;
