--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,18 +9,36 @@
   font-size: $default-font-size;
   transform: skew(-12deg);
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+  @include respond(phone) {
+    transform: skew(0);
+  }
   &__shape {
     width: 15rem;
     height: 15rem;
     position: relative;
+    overflow: hidden;
     float: left;
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
+    border-radius: 50%;
     transform: translateX(-3rem) skewX(12deg);
     //here we add skew individually to the image shape
     //to fix it because there is a (transform) property already.
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      -webkit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      border-radius: none;
+    }
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skew(0);
+    }
   }
 
   &__img {
@@ -31,10 +49,13 @@
     transform: translate(-50%, -50%) scale(1.4);
     transition: all 0.5s;
   }
-
   &__text //here we define the text to unskew it (Although we don't need anything with it except the unskew)
   {
     transform: skewX(12deg);
+
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
